Store coordinates individually, and optimize driver matching function to use JPA queries